style.css
body{
    font-family: 'Manrope', sans-serif;
}

::selection { 
    background: #b2dfdb; 
}

.container{
    max-width: 840px;
    margin: auto;
}


.navbar{
    background-color: #e0f2f1c7;
    border-bottom-left-radius: 8px;
    border-bottom-right-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
    backdrop-filter: blur(4px);
}

.material-icons{
    color: #00796b;
    /* font-size: 28px; */
    display: inline;
    vertical-align: bottom;
}

@media (max-width: 768px) { 
    .snippet-card{
        margin-left: auto;
        margin-right: auto;
    }

    .circle1{
        display: none;
    }
 }


.snippet-card{
    padding: 2rem;
    margin-right: 0.25rem;
    margin-bottom: 0.75rem;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
    position: relative;
    background-color: white;
    overflow: hidden;
    /* border: 1px solid #00796b; */
}

.circle1{
    width: 256px;
    height: 256px;
    border-radius: 256px;
    background-color: #e0f2f1;
    position: absolute;
    right: -32px;
    bottom: 32px;
    z-index: 1;
}

.btn-primary{
    font-weight: 600;
    background-color: #00796b;
    border-color: #00796b;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
}

.btn-primary:hover, .btn-primary:active, .btn-primary:focus, .btn-primary:target{
    font-weight: 600;
    background-color: #00897b;
    border-color: #00897b;
    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
    /* box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px; */
}

.btn-secondary{
    color: #00796b;
    font-weight: 600;
    background-color: #e0f2f1;
    border-color: #00796b;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
}

.btn-secondary:hover, .btn-secondary:active, .btn-secondary:focus, .btn-secondary:target{
    color: #00796b;
    font-weight: 600;
    background-color: #b2dfdb;
    border-color: #00796b;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
    /* box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;     */
}


a{
    text-decoration: none;
}

.icon-56{
    width: 56px;
    height: 56px;
    object-fit: cover;
}


.code-repo-card{
    padding: 1.5rem;
    border: 1px solid #00796b;
    /* border: 1px solid rgb(182, 182, 182); */
    border-radius: 4px;
    /* padding: 2rem 0rem; */
    /* border-bottom: 1px solid #00796b; */
}

.case-study-card{
    padding: 2.25rem;
    border-radius: 8px;
    border-top: 6px solid #00897b;
    border-bottom-left-radius: 8px;
    /* box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px, rgba(0, 0, 0, 0.3) 0px 18px 36px -18px; */
    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
    position: relative;
    overflow: hidden;
}

.case-study-image{
    width: 100%;
    border-radius: 4px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}

.circle2{
    width: 128px;
    height: 128px;
    border-radius: 96px;
    background-color: #26a69a;
    position: absolute;
    right: -64px;
    bottom: -64px;
    z-index: -1;
}

.circle3{
    width: 128px;
    height: 128px;
    border-radius: 96px;
    background-color: #26a69a;
    position: absolute;
    left: -64px;
    bottom: -64px;
    z-index: -1;
}



.badge{
    background-color: #e0f2f1;
    color: #00796b;
    border-radius: 2px;
}

.rounded-pill{
    border-color: #00796b;
    background-color: rgb(238, 238, 238);
}

.link-button{
    color: #00796b;
    font-weight: 700;
}

.arrow-font-new-tab{
    font-weight: 700;
    font-size: 1rem;
    vertical-align: middle;
}

.nav-link{
    color: #000000!important;
    padding: 0.25rem;
    font-weight: 300;
}
.nav-link.active{
    background-color: #26a69a!important;
}

.gallery-images{
    width: 100%;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
}



/* Responsive youtube embeds */
.video-container {
    overflow: hidden;
    position: relative;
    width:100%;
    border-radius: 8px;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;}

.video-container::after {
    padding-top: 56.25%;
    display: block;
    content: '';
    box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
}

.video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border-radius: 8px;
}

.linkedin-embeds{
    width: 100%;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px; */
    margin-bottom: 1rem;
    border-radius: 8px;
    
}

.article-card{
    background-color: #e0f2f1;
    border-radius: 8px;
    padding: 2rem;
    margin-bottom: 1.5rem;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
    /* box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px; */
    /* height: 92%; */
}

